--- a/src/components/Task/task.module.css
+++ b/src/components/Task/task.module.css
@@ -1,49 +1,49 @@
+/* task.module.css */
 .task {
-    width: 100%;
-    background: #262626;
-    border: 1px solid #333333;
-    padding: 16px;
-    border-radius: 8px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    gap: 12px;
-  }
-  
-  .task p {
-    font-size: 14px;
-    line-height: 19px;
-    color: #F2F2F2;
-    margin-right: auto;
-  }
-  
-  p.textCompleted {
-    color: #808080;
-    text-decoration: line-through;
-  }
-  
-  .checkContainer {
-    width: 18px;
-    height: 18px;
-    background: none;
-    border: none;
-  }
-  
-  .checkContainer div {
-    width: 100%;
-    height: 100%;
-    border-radius: 999px;
-    border: 2px solid #4EA8DE;
-  }
-  
-  .checkContainer svg {
-    width: 100%;
-    height: 100%;
-    color: #5E60CE;
-  }
-  
-  .deleteButton {
-    background: none;
-    border: none;
-    color: #808080;
-  }
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 12px;
+  padding: 16px;
+  background: #262626;
+  border: 1px solid #333333;
+  border-radius: 8px;
+}
+
+.task p {
+  flex: 1;
+  font-size: 14px;
+  line-height: 19px;
+  color: #F2F2F2;
+  margin: 0;
+  margin-right: 12px; /* Ajuste a margem para separar o texto do botão */
+}
+
+.checkContainer {
+  width: 18px;
+  height: 18px;
+  background: none;
+  border: none;
+}
+
+.checkContainer div {
+  width: 18px;
+  height: 18px;
+  border-radius: 50%;
+  border: 2px solid #4EA8DE;
+}
+
+.checkContainer svg {
+  width: 100%;
+  height: 100%;
+  color: #5E60CE;
+}
+
+.deleteButton {
+  width: 20px;
+  height: 20px;
+  background: none;
+  border: none;
+  color: #808080;
+  flex-shrink: 0; /* Evitar que o botão diminua seu tamanho */
+}
