--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -14,3 +14,36 @@
   button {
     cursor: pointer;
   }
+
+  /* global.css */
+
+/* Estilizando a barra de rolagem para WebKit */
+/* Barra vertical */
+::-webkit-scrollbar {
+  width: 12px; /* Largura da barra de rolagem vertical */
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1; /* Cor de fundo da barra de rolagem */
+}
+
+::-webkit-scrollbar-thumb {
+  background: #888; /* Cor do 'ponteiro' da barra de rolagem */
+  border-radius: 6px; /* Arredondamento do 'ponteiro' */
+}
+
+/* Barra horizontal */
+::-webkit-scrollbar-horizontal {
+  height: 12px; /* Altura da barra de rolagem horizontal */
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555; /* Cor do 'ponteiro' quando passar o mouse por cima */
+}
+
+/* Estilizando a barra de rolagem para Firefox */
+/* Barra vertical e horizontal */
+html {
+  scrollbar-width: thin; /* Largura da barra de rolagem */
+  scrollbar-color: #888 #f1f1f1; /* Cor da barra de rolagem */
+}
